Fixing a problem in Reflection API for JDK higher than Java 8